--- a/AplicacionRRHHSimetrica/AplicacionRRHHSimetrica/AplicacionRRHHSimetrica.csproj
+++ b/AplicacionRRHHSimetrica/AplicacionRRHHSimetrica/AplicacionRRHHSimetrica.csproj
@@ -45,6 +45,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -120,11 +126,21 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CandidatosController.cs" />
+    <Compile Include="Controllers\Evaluacion_CandController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Data\DbSimetricaConxtext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Area_Departments.cs" />
+    <Compile Include="Models\Candidatos.cs" />
+    <Compile Include="Models\Estatus.cs" />
+    <Compile Include="Models\Evaluacion_Cand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CandidatoServices\CandidatoServ.cs" />
+    <Compile Include="Services\EvaluacionCandService\EvaluacionCanServ.cs" />
+    <Compile Include="Services\ValidarCedula.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -162,10 +178,15 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Candidatos\Index.cshtml" />
+    <Content Include="Views\Candidatos\CrearCandidato.cshtml" />
+    <Content Include="Views\Candidatos\EliminarCandidato.cshtml" />
+    <Content Include="Views\Evaluacion_Cand\EliminarEvaluacion.cshtml" />
+    <Content Include="Views\Evaluacion_Cand\CrearEvaluacion.cshtml" />
+    <Content Include="Views\Evaluacion_Cand\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
